tests/baselines/reference/qualify(strict=true).errors.txt
qualify.ts(18,9): error TS7008: Member 'p' implicitly has an 'any' type.
qualify.ts(21,13): error TS2322: Type 'number' is not assignable to type 'I'.
qualify.ts(23,13): error TS7008: Member 'q' implicitly has an 'any' type.
qualify.ts(30,13): error TS2322: Type 'number' is not assignable to type 'I2'.
qualify.ts(37,13): error TS7008: Member 'zeep' implicitly has an 'any' type.
qualify.ts(42,13): error TS7008: Member 'z' implicitly has an 'any' type.
qualify.ts(45,13): error TS2741: Property 'zeep' is missing in type 'I4' but required in type 'I3'.
qualify.ts(45,22): error TS2454: Variable 'v1' is used before being assigned.
qualify.ts(46,13): error TS2740: Type 'I4' is missing the following properties from type 'I3[]': length, pop, push, concat, and 16 more.
qualify.ts(46,24): error TS2454: Variable 'v1' is used before being assigned.
qualify.ts(47,13): error TS2322: Type 'I4' is not assignable to type '() => I3'.
  Type 'I4' provides no match for the signature '(): I3'.
qualify.ts(47,26): error TS2454: Variable 'v1' is used before being assigned.
qualify.ts(48,13): error TS2322: Type 'I4' is not assignable to type '(k: I3) => void'.
  Type 'I4' provides no match for the signature '(k: I3): void'.
qualify.ts(48,32): error TS2454: Variable 'v1' is used before being assigned.
qualify.ts(49,13): error TS2741: Property 'k' is missing in type 'I4' but required in type '{ k: I3; }'.
qualify.ts(49,27): error TS2454: Variable 'v1' is used before being assigned.
qualify.ts(54,5): error TS7008: Member 'k' implicitly has an 'any' type.
qualify.ts(58,5): error TS2741: Property 'p' is missing in type 'I' but required in type 'T.I'.
qualify.ts(58,11): error TS2454: Variable 'y' is used before being assigned.


==== qualify.ts (19 errors) ====
    module M {
        export var m=0;
        export module N {
            export var n=1;
        }
    }
    
    module M {
        export module N {
            var y=m;
            var x=n+y;
        }
    }
    
    
    module T {
        export interface I {
            p;
            ~
!!! error TS7008: Member 'p' implicitly has an 'any' type.
        }
        export module U {
            var z:I=3;
                ~
!!! error TS2322: Type 'number' is not assignable to type 'I'.
            export interface I2 {
                q;
                ~
!!! error TS7008: Member 'q' implicitly has an 'any' type.
            }
        }
    }
    
    module Peer {
        export module U2 {
            var z:T.U.I2=3;
                ~
!!! error TS2322: Type 'number' is not assignable to type 'I2'.
        }
    }
    
    module Everest {
        export module K1 {
            export interface I3 {
                zeep;
                ~~~~
!!! error TS7008: Member 'zeep' implicitly has an 'any' type.
            }
        }
        export module K2 {
            export interface I4 {
                z;
                ~
!!! error TS7008: Member 'z' implicitly has an 'any' type.
            }
            var v1:I4;
            var v2:K1.I3=v1;
                ~~
!!! error TS2741: Property 'zeep' is missing in type 'I4' but required in type 'I3'.
!!! related TS2728 qualify.ts:37:13: 'zeep' is declared here.
                         ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
            var v3:K1.I3[]=v1;
                ~~
!!! error TS2740: Type 'I4' is missing the following properties from type 'I3[]': length, pop, push, concat, and 16 more.
                           ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
            var v4:()=>K1.I3=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type '() => I3'.
!!! error TS2322:   Type 'I4' provides no match for the signature '(): I3'.
                             ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
            var v5:(k:K1.I3)=>void=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type '(k: I3) => void'.
!!! error TS2322:   Type 'I4' provides no match for the signature '(k: I3): void'.
                                   ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
            var v6:{k:K1.I3;}=v1;
                ~~
!!! error TS2741: Property 'k' is missing in type 'I4' but required in type '{ k: I3; }'.
!!! related TS2728 qualify.ts:49:17: 'k' is declared here.
                              ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
        }
    }
    
    interface I {
        k;
        ~
!!! error TS7008: Member 'k' implicitly has an 'any' type.
    }
    
    var y:I;
    var x:T.I=y;
        ~
!!! error TS2741: Property 'p' is missing in type 'I' but required in type 'T.I'.
!!! related TS2728 qualify.ts:18:9: 'p' is declared here.
              ~
!!! error TS2454: Variable 'y' is used before being assigned.
    
    